@@ -5,6 +5,9 @@ libv4l-0.5.4
 * Add support for downscaling to make apps which want low resolutions
   (skype, spcaview) happy when used with cams which can only do high
   resolutions (by Lukáš Karas <lukas.karas@centrum.cz>).
+* Add support for converting to YV12 planar (next to the already supported
+  YU12 / I420)
+* Implement RGB/BGR24 -> YU/YV12 conversion
 
 libv4l-0.5.3
 ------------
